Item overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,9 @@ div.ms-Callout-container > div {
 .items {
     height: calc(100vh - 125px);
 }
+.items div{
+    overflow: hidden;
+}
 
 .ms-DetailsHeader {
     border: none !important;
